# nexus-lang

./: README.md
.github/workflows/: rust.yml
nexus-rs/: .gitignore  Cargo.toml  test.nxs  var_decl.nxs
nexus-rs/examples/: assignment_stmt.nxs  binary_expr.nxs  connect_stmt.nxs  const_decl.nxs  dot.nxs  function_call.nxs  function_decl.nxs  group_expr.nxs  literal_expr.nxs  scan_errors.nxs  test.nxs  test0.nxs  test2.nxs  test3.nxs  test4.nxs  unary_expr.nxs  use_decl.nxs
nexus-rs/src/: ast.rs  cursor.rs  filereader.rs  lib.rs  main.rs  parser.rs  ptr.rs  scanner.rs  token.rs  token_cursor.rs
nexus-rs/src/ast/: ast.rs  ptr.rs
nexus-rs/src/nxs_ast/: ast.rs  ptr.rs
nexus-rs/src/nxs_parser/: parser.rs  token_cursor.rs
nexus-rs/src/nxs_scanner/: cursor.rs  scan_error.rs  scanner.rs  source_line.rs
nexus-rs/src/nxs_token/: token.rs
nexus-rs/src/parser/: parser.rs  token_cursor.rs
nexus-rs/src/scanner/: cursor.rs  scanner.rs
nexus-rs/src/utils/: filereader.rs
nexus-rs/tests/: parser_tests.rs  scanner_tests.rs
nexus-rs/tests/test_code/: block_expr.nxs  const_decl.nxs  dot_op.nxs  expr_group.nxs  for_expr.nxs  function_call.nxs  group_expr.nxs  if_expr.nxs  node_expr.nxs  print_stmt.nxs  range_expr.nxs  unary_expr.nxs  use_decl.nxs  var_decl.nxs  while_expr.nxs
