[package]
name = "nexus-rs"
version = "0.1.0"
edition = "2021"

default-run = "nexus-rs"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
lazy_static = "1.4.0"
rustyline = "11.0.0"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = "0.24.3"
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.3.0"
